--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <section id="secao7">
   <main class="container">
       <div class="bg-light p-5 rounded">
-        <h1 class="text">Endereço</h1>
+        <h1 class="text"></h1>
         
 
       </div>
