--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
   </head>
-  <body class="temaescuro">
+  <body>
 
   <section class="module parallax parallax-1" data-type="background" data-speed="10">
     <div class="parallax-container">
@@ -38,10 +38,7 @@
     </div>
   </section>
 
-<header>
-
-  
-  
+<header>  
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand lead" href="#">Mila Cahs</a>
@@ -58,6 +55,9 @@
             </li>
             <li class="nav-item lead">
               <a class="nav-link active" href="#contato">Contato</a>
+            </li>
+            <li class="nav-item lead">
+              <a class="btn btn-success" class="nav-link active" href="jogo.html">Jogo</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -128,7 +128,7 @@
       <div class="bg-light p-5 rounded">
         <h1 class="text">PERFIL</h1>
           <p class="lead">Proativa, comunicativa, flexível e qualificada.</p>
-          <p class="lead">É uma grande oportunidade de me aprofundar em tecnologia para incentivar as adaptações que forem necessárias..</p>
+          <p class="lead">É uma grande oportunidade de me aprofundar em tecnologia para incentivar as adaptações que forem necessárias.</p>
       </div>
     </main>   
 </section>
@@ -250,6 +250,10 @@
 </section>
 
 <div class="parallax"></div>
+
+<div class="footer">
+  <p>Todos os direitos reservados</p>
+</div>
 
 <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 
