--- a/jogo.html
+++ b/jogo.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo</title>
 
     <!-- bootstrap core css -->
@@ -15,6 +17,7 @@
 
     <link href="custom.css" rel="stylesheet">
 
+    <!-- Custom styles for BINGO -->
     <link href="CSS/bingo.css" rel="stylesheet">
 
     <!-- Fonte do Google -->
@@ -58,7 +61,11 @@
 
     <section>
         <main class="container">
-            <div id="cabecalho"></div>
+            <div id="cabecalho">
+                <button type="button" class="btn btn-primary" onclick="gerarCartelaBingo()">Gerar Cartela de Bingo</button>
+                <button type="button" class="btn btn-success">Iniciar Jogo</button>
+                <button type="button" class="btn btn-secondary">Limpar Cartelas</button>
+            </div>
             <div class="bg-light p-5 rounded" id="cartela"></div>
         </main>   
     </section>
