--- a/jogo.html
+++ b/jogo.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item lead">
-                <a class="btn btn-success" class="nav-link active" href="jogo.html">Jogo</a>
+                <a class="btn btn-success nav-link active" href="jogo.html">Jogo</a>
                 </li>                
             </ul>
             </div>
